--- a/taaFront/package.json
+++ b/taaFront/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^6.1.10",
     "angular2-multiselect-dropdown": "^3.2.1",
     "core-js": "^2.5.4",
+    "primeicons": "^1.0.0",
+    "primeng": "^7.0.0-beta.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
