--- a/taa-back/pom.xml
+++ b/taa-back/pom.xml
@@ -80,6 +80,18 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>2.0.5.RELEASE</version>
 		</dependency>
+		<dependency>
+			<!-- JSON Web Token Support -->
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.7.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.4</version>
+		</dependency>
 
 	</dependencies>
 
