--- a/taa-back/src/main/resources/application.properties
+++ b/taa-back/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.password = Mouhi94@m
 #spring.datasource.url = jdbc:mysql://mysql.localhost/depot_test
 #spring.datasource.username = mj94
 #spring.datasource.password = taa
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
